# train-planner

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  RUNNING_WITHOUT_API.md  flake.nix
.github/workflows/: ci.yml
train-server/: Cargo.toml
train-server/data/: README.md
train-server/data/mock_boards/: BRI.json  PAD.json  RDG.json  SWI.json
train-server/proptest-regressions/domain/: call.txt  journey.txt  service.txt
train-server/proptest-regressions/planner/: search.txt
train-server/src/: cache.rs  identify.rs  lib.rs  main.rs
train-server/src/darwin/: client.rs  convert.rs  error.rs  mock.rs  mod.rs  types.rs
train-server/src/domain/: call.rs  error.rs  headcode.rs  identify.rs  journey.rs  leg.rs  mod.rs  operator.rs  service.rs  service_uid.rs  station.rs  time.rs
train-server/src/planner/: arrivals_index.rs  bfs.rs  config.rs  mod.rs  rank.rs  search.rs  search_tests.rs
train-server/src/stations/: cache.rs  client.rs  error.rs  mod.rs  names.rs
train-server/src/walkable/: mod.rs
train-server/src/web/: dto.rs  mod.rs  routes.rs  rtt.rs  state.rs  templates.rs
train-server/static/: style.css
train-server/templates/: about.html  base.html  error.html  identify_results.html  index.html  journey_results.html  service_list.html
train-server/tests/fixtures/: elizabeth_line_zlw_departures.json
