[package]
name = "train-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
thiserror = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
proptest = "1"
