[package]
name = "train-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
thiserror = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
moka = { version = "0.12", features = ["future"] }
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[dev-dependencies]
proptest = "1"
tempfile = "3"
